errors/errors_20240520_153932.txt
../ft_bzero.c:20:2: error: implicit declaration of function 'ft_check_null' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        ft_check_null(s);
        ^
1 error generated.
../ft_strmapi.c:23:11: error: variable 'a' is uninitialized when used here [-Werror,-Wuninitialized]
        while (s[a])
                 ^
../ft_strmapi.c:17:10: note: initialize the variable 'a' to silence this warning
        size_t  a;
                 ^
                  = 0
1 error generated.
../ft_strnstr.c:25:3: error: implicit declaration of function 'ft_error_and_exit' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
                ft_error_and_exit("Little is longer than big.");
                ^
../ft_strnstr.c:61:2: error: implicit declaration of function 'ft_check_null' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        ft_check_null(big, little);
        ^
../ft_strnstr.c:61:2: note: did you mean 'ft_check_size'?
../ft_strnstr.c:17:13: note: 'ft_check_size' declared here
static void     ft_check_size(const char *big, const char *little, size_t len)
                ^
2 errors generated.
